--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gh-pages": "^6.2.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "typescript": "^5.9.3",
     "vite": "^6.0.3"
   }
 }
